# UQ_airfoil

./: .gitignore  README.md  best_model.pth.tar  dataset.py  main.py  metrics.py  model.py  post_processing.py  pyproject.toml  setup.py  training.py  utils.py
docs/: conf.py  index.rst  make.bat  modules.rst  src.rst
docs/_build/doctrees/: dataset.doctree  environment.pickle  index.doctree  main.doctree  metrics.doctree  model.doctree  modules.doctree  post_processing.doctree  src.doctree  training.doctree  utils.doctree
docs/_build/html/: .buildinfo  dataset.html  genindex.html  index.html  main.html  metrics.html  model.html  modules.html  objects.inv  post_processing.html  py-modindex.html  search.html  searchindex.js  src.html  training.html  utils.html
docs/_build/html/_sources/: index.rst.txt
src/: dataset.py  job_train_cpu  main.py  metrics.py  model.py  post_processing.py  read_airfrans.py  training.py
src/UQ_airfoil/: dataset.py  learning_rate_SGLD.pt  main.py  metrics.py  model.py  post_processing.py  run_postproc.sh  training.py  utils.py
